{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 37,
  "lineage": "90bcfdbc-0064-cd5b-0a60-55695a7b48b8",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:loadbalancer/app/flask-express-alb/d135f8caa7aec251",
            "arn_suffix": "app/flask-express-alb/d135f8caa7aec251",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-express-alb-1650084564.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:loadbalancer/app/flask-express-alb/d135f8caa7aec251",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-express-alb",
            "preserve_host_header": false,
            "region": "ap-south-2",
            "security_groups": [
              "sg-0b953588b4ab870ac"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05121c401da63c3ac"
              },
              {
                "subnet_id": "subnet-063ac3cca5107f017"
              }
            ],
            "subnets": [
              "subnet-05121c401da63c3ac",
              "subnet-063ac3cca5107f017"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "vpc_id": "vpc-0e55e0e9819cb2e74",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:loadbalancer/app/flask-express-alb/d135f8caa7aec251"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_1",
            "module.networking.aws_subnet.public_2",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-fe/24494f94a8c51db4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:loadbalancer/app/flask-express-alb/d135f8caa7aec251",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.frontend",
            "module.networking.aws_subnet.public_1",
            "module.networking.aws_subnet.public_2",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-be/b5f9e971d9fe0e04",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener-rule/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1/c2630b1054ebc7a8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/submit"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener-rule/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1/c2630b1054ebc7a8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1",
            "priority": 100,
            "region": "ap-south-2",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:listener-rule/app/flask-express-alb/d135f8caa7aec251/a99b1f7915b94df1/c2630b1054ebc7a8"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.backend",
            "module.alb.aws_lb_target_group.frontend",
            "module.networking.aws_subnet.public_1",
            "module.networking.aws_subnet.public_2",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-be/b5f9e971d9fe0e04",
            "arn_suffix": "targetgroup/flask-express-be/b5f9e971d9fe0e04",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-be/b5f9e971d9fe0e04",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-express-be",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-be/b5f9e971d9fe0e04"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-fe/24494f94a8c51db4",
            "arn_suffix": "targetgroup/flask-express-fe/24494f94a8c51db4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-fe/24494f94a8c51db4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:343779419069:loadbalancer/app/flask-express-alb/d135f8caa7aec251"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-express-fe",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "flask-express"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:343779419069:targetgroup/flask-express-fe/24494f94a8c51db4"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:internet-gateway/igw-0bc0d2984dc2e5d1d",
            "id": "igw-0bc0d2984dc2e5d1d",
            "owner_id": "343779419069",
            "region": "ap-south-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-igw",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-igw",
              "Project": "flask-express"
            },
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "igw-0bc0d2984dc2e5d1d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:route-table/rtb-0d4b237c8cc6df4e1",
            "id": "rtb-0d4b237c8cc6df4e1",
            "owner_id": "343779419069",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc0d2984dc2e5d1d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-public-rt",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-public-rt",
              "Project": "flask-express"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "rtb-0d4b237c8cc6df4e1",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e98475f523a4a3",
            "region": "ap-south-2",
            "route_table_id": "rtb-0d4b237c8cc6df4e1",
            "subnet_id": "subnet-063ac3cca5107f017"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "rtbassoc-077e98475f523a4a3",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_1",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c082d10c2ace8bfb",
            "region": "ap-south-2",
            "route_table_id": "rtb-0d4b237c8cc6df4e1",
            "subnet_id": "subnet-05121c401da63c3ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "rtbassoc-0c082d10c2ace8bfb",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_2",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:subnet/subnet-063ac3cca5107f017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063ac3cca5107f017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343779419069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-public-subnet-1",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-public-subnet-1",
              "Project": "flask-express"
            },
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "subnet-063ac3cca5107f017",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:subnet/subnet-05121c401da63c3ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05121c401da63c3ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343779419069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-public-subnet-2",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-public-subnet-2",
              "Project": "flask-express"
            },
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "subnet-05121c401da63c3ac",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:vpc/vpc-0e55e0e9819cb2e74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db1d6c397eb203dc",
            "default_route_table_id": "rtb-0d54d92586bb690c5",
            "default_security_group_id": "sg-057aac9816b320995",
            "dhcp_options_id": "dopt-09477a44290b80232",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e55e0e9819cb2e74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d54d92586bb690c5",
            "owner_id": "343779419069",
            "region": "ap-south-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-vpc",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-vpc",
              "Project": "flask-express"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "vpc-0e55e0e9819cb2e74",
            "region": "ap-south-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:security-group/sg-0b953588b4ab870ac",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b953588b4ab870ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "flask-express-alb-sg",
            "name_prefix": "",
            "owner_id": "343779419069",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-alb-sg",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-alb-sg",
              "Project": "flask-express"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "sg-0b953588b4ab870ac",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:security-group/sg-03216c00be16ace72",
            "description": "Backend ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03216c00be16ace72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB to Backend",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b953588b4ab870ac"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "flask-express-backend-sg",
            "name_prefix": "",
            "owner_id": "343779419069",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-backend-sg",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-backend-sg",
              "Project": "flask-express"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "sg-03216c00be16ace72",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:343779419069:security-group/sg-0db00a028d4121fd8",
            "description": "Frontend ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db00a028d4121fd8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB to Frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b953588b4ab870ac"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "flask-express-frontend-sg",
            "name_prefix": "",
            "owner_id": "343779419069",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-frontend-sg",
              "Project": "flask-express"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "flask-express-frontend-sg",
              "Project": "flask-express"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e55e0e9819cb2e74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "343779419069",
            "id": "sg-0db00a028d4121fd8",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}